# cpp-base-util

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  MathUtil.cpp  MathUtil.h  MiscUtil.cpp  MiscUtil.h  StringUtil.cpp  StringUtil.h  VectorUtil.cpp  VectorUtil.h
tests/: CMakeLists.txt  StringUtilTests.cpp
